--- a/org-setup.org
+++ b/org-setup.org
@@ -294,7 +294,7 @@ Related to this is how tasks are clocked. If I clock-in and clock-out immediatel
    ;; Set column view headings
    org-columns-default-format "%50ITEM(Task) %10Effort(Effort){:} %10CLOCKSUM"
    ;; Set default effort values
-   org-global-properties (quote (("Effort_ALL" . "0:15 0:30 0:45 1:00 2:00 3:00 4:00 5:00 6:00 0:00")))
+   org-global-properties (quote (("Effort_ALL" . "0:15 0:30 1:00 2:00 4:00 6:00 8:00 16:00")))
    ;; When there's 0 time spent, remove the entry
    org-clock-out-remove-zero-time-clocks t
    )
