--- a/spelling-setup.org
+++ b/spelling-setup.org
@@ -17,10 +17,18 @@ This document is literate explanation of the setup for my spelling implementatio
    #+begin_src emacs-lisp :export yes
      ;; Set up languages
      (setenv "LANG" "en_AU")
+     (defun my/fix-ispell-contraction ()
+       "Fixes contractions (e.g. shouldn't) aren't not being checked properly.
+     See https://github.com/casouri/lunarymacs/blob/master/star/checker.el#L44-L49."
+       (add-to-list 'ispell-dictionary-alist
+                    '("en_AU" "[[:alpha:]]" "[^[:alpha:]]" "[']" nil ("-d" "en_AU") nil utf-8)))
 
-     (when (spacemacs/system-is-mswindows)
-       (setq ispell-program-name
-             "C:/msys64/mingw64/bin/hunspell.exe")
+     (with-eval-after-load "ispell"
+       (when (spacemacs/system-is-mswindows)
+         (setq ispell-program-name
+               "C:/msys64/mingw64/bin/hunspell.exe")
+         )
+       (add-hook 'flyspell-mode-hook 'my/fix-ispell-contraction)
        )
    #+end_src
 
