minor change to org-capture templates

--- a/org-setup.org
+++ b/org-setup.org
@@ -148,38 +148,23 @@ The following code provides the capture templates when I add TODO tasks. Best pl
      ("tr" "Ticklers/Reminders" entry (file+headline (lambda() (concat org-directory "/general.org")) "Ticklers")
       "* TODO %?\nCaptured: %u\n%a\n" :clock-in t :clock-resume t)
      ("m" "Meeting templates")
-     ("mp" "People Leaders" entry (file+headline (lambda() (concat org-directory "/meetings-2023.org")) "People Leaders")
-      "* MEETING :MEETING:\n** Date: %^t \n** Attendees: MN, RN, SL\n** SL Updates\n*** %?\n** RN Updates\n** MN Updates\n" :clock-in t :clock-resume t)
-     ("mg" "General Meeting" entry (file+headline (lambda() (concat org-directory "/meetings-2023.org")) "General Meetings")
-      "* MEETING Topic: %? :MEETING:\n** Date: %^t \n** Attendees: Steve Lane\n** Notes Prior\n** Notes During\n" :clock-in t :clock-resume t)
-     ("mr" "Regular People Meetings" entry (file+function (lambda() (concat org-directory "/meetings-2023.org")) sprazza/org-get-target-headline)
-      "* MEETING Regular meeting with %? :MEETING:\n** Date: %^t \n** Attendees: SL\n** Notes Prior\n** Notes During\n" :clock-in t :clock-resume t)
-     ("mt" "T5k Regular Meeting" entry (file+headline (lambda() (concat org-directory "/t5k.org")) "Meetings")
-      "* MEETING Regular T5k :MEETING:\n** Date: %^t \n** Attendees: SL, MN, FW\n** Notes Prior\n** Notes During\n" :clock-in t :clock-resume t)
-     ("mT" "T5k Other Meeting" entry (file+headline (lambda() (concat org-directory "/t5k.org")) "Meetings")
-      "* MEETING T5k: %? :MEETING:\n** Date: %^t \n** Attendees: SL\n** Notes Prior\n** Notes During\n" :clock-in t :clock-resume t)
-     ;; ("e" "Respond email" entry (file org-default-notes-file)
-     ;;  "* TODO Respond to %:from on %:subject :EMAIL: \nSCHEDULED: %t\n%U\n%a\n" :clock-in t :clock-resume t :immediate-finish t)
-     ;; ("s" "Someday" entry (file org-default-notes-file)
-     ;;  "* SOMEDAY %? :SOMEDAY: \n%u\n" :clock-in t :clock-resume t :empty-lines 1)
-     ("p" "Project entry" entry (file org-default-notes-file)
-      "* PROJECT %? :PROJECT: \nCaptured: %u\n" :clock-in t :clock-resume t :empty-lines 1)
+     ("mp" "People Leaders" entry (file+headline (lambda() (concat org-directory "/meetings.org")) "People Leaders")
+      "* MEETING :MEETING:\n** Date: %^u\n** Attendees: MN, RN, SL\n** SL Updates\n*** %?\n** RN Updates\n** MN Updates\n" :clock-in nil :clock-resume t)
+     ("mg" "General Meeting" entry (file+headline (lambda() (concat org-directory "/meetings.org")) "General Meetings")
+      "* MEETING Topic: %? :MEETING:\n** Date: %^u\n** Attendees: Steve Lane\n** Notes Prior\n** Notes During\n" :clock-in nil :clock-resume t)
+     ("mr" "Regular People Meetings" entry (file+function (lambda() (concat org-directory "/meetings.org")) sprazza/org-get-target-headline)
+      "* MEETING Regular meeting with %? :MEETING:\n** Date: %^u\n** Attendees: SL\n** Notes Prior\n** Notes During\n" :clock-in nil :clock-resume t)
+     ("mw" "Weekly Review" entry (file+headline (lambda() (concat org-directory "/meetings.org")) "Weekly Review")
+      "* MEETING Weekly Review - %^u :MEETING:\n** Attendees: Steve Lane, Sally Donovan, Ryan Alldis\n** Notes Prior\n*** %?\n** Notes During\n" :clock-in nil :clock-resume t)
      ("j" "Journal Club" entry (file org-journal-file)
       "* DETAILS: %? :JOURNAL CLUB: \n%u\n" :clock-in t :clock-resume t :empty-lines 1)
      ("P" "Professional development templates")
      ("Ps" "Seminar" entry (file+headline (lambda() (concat org-directory "/professional-development.org")) "Seminars")
-      "* Title: %?\n** Date: %^t\n** Speaker: \n** Notes\n" :clock-in t :clock-resume t)
+      "* Title: %?\n** Date: %^u\n** Speaker: \n** Notes\n" :clock-in t :clock-resume t)
      ("Pw" "Workshop" entry (file+headline (lambda() (concat org-directory "/professional-development.org")) "Workshops")
-      "* Title: %?\n** Date: %^t\n** Presenter: " :clock-in t :clock-resume t)
-     ("M" "Management")
-     ("Mt" "Task Management" entry (file+headline (lambda() (concat org-directory "/management.org")) "Task Management")
-      "* TODO %?\nCaptured: %u\n%a\n" :clock-in t :clock-resume t)
-     ("Mp" "People Management" entry (file+headline (lambda() (concat org-directory "/management.org")) "People Management")
-      "* TODO %?\nCaptured: %u\n%a\n" :clock-in t :clock-resume t)
-     ("Mm" "Task Management Meeting" entry (file+headline (lambda() (concat org-directory "/management.org")) "Task Management")
-      "* MEETING Task Management :MEETING:\nDate: %^t\n** Attendees: SL, RN, MN\n** Notes Prior\n*** %?\n** Notes During\n" :clock-in t :clock-resume t)
+      "* Title: %?\n** Date: %^u\n** Presenter: " :clock-in t :clock-resume t)
      ("i" "Issue tracking" entry (file (lambda() (concat org-directory "/issue-tracking.org")))
-      "* TODO %^{Title}\n%^{Type}p\nCaptured: %u\n** Description\n" :clock-in t :clock-resume t)
+      "* TODO %^{Title}\n%^{Type}p\nCaptured: %u\n** Description\n" :clock-in nil :clock-resume t)
      ("J" "Journal wins/losses" entry (file+function (lambda() (concat org-directory "/wins-and-losses.org")) sprazza/org-get-target-headline)
     "* %u\n** %U\n%?" :clock-in nil)
      )
